fixed text-align: left for gallery items

--- a/assets/css/3-modules/_chose-your-presents.sass
+++ b/assets/css/3-modules/_chose-your-presents.sass
@@ -96,11 +96,12 @@
 			display: inline-block
 			margin-bottom: 20px
 			margin-right: 5px
+			text-align: left
 			
 			.cover
 				height: 130px
 				width: 130px
-				border: 10px solid white
+				border: 7px solid white
 				box-shadow: 0px 1px 3px 0px rgb(100,100,100)
 
 			a
