--- a/assets/css/3-modules/_wish-list.sass
+++ b/assets/css/3-modules/_wish-list.sass
@@ -91,10 +91,14 @@
 			float: left
 			color: #a3acb3
 
+			&:hover
+				color: #000
+
 		.clip1
 			position: absolute
 			left: -3px
 			top: 50px
+
 		hr
 			margin: 5px 2px
 
@@ -104,17 +108,31 @@
 		height: 635px
 		padding: 0 10px
 
-		.item
+		.item	
+			display: inline-block
+			margin: 15px 0
 
 			.cover
-				display: inline-block
 				height: 70px
 				width: 70px
 				background-color: red
+				border: 5px solid white
+				box-shadow: 0px 1px 3px 0px rgb(100,100,100)
+				float: left
+				display: block
+				margin-right: 10px
+				
 			.item-name
 				font: 1.2em 'Pacifico', cursive
 				color: #1b75ba
+				line-height: 20px
+				text-align: left
+				display: block
+				&:hover
+					color: $orange
+
 			.item-price
+
 
 	.share
 
