--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -485,11 +485,12 @@ input[type="button"] {
       height: 215px;
       display: inline-block;
       margin-bottom: 20px;
-      margin-right: 5px; }
+      margin-right: 5px;
+      text-align: left; }
       .chose-your-presents .gallery .item .cover {
         height: 130px;
         width: 130px;
-        border: 10px solid white;
+        border: 7px solid white;
         box-shadow: 0px 1px 3px 0px #646464; }
       .chose-your-presents .gallery .item a {
         font-size: 14px;
@@ -611,6 +612,8 @@ input[type="button"] {
       font: 12px "Ubuntu", serif;
       float: left;
       color: #a3acb3; }
+      .wish-list .article .read-more:hover {
+        color: #000; }
     .wish-list .article .clip1 {
       position: absolute;
       left: -3px;
@@ -622,14 +625,26 @@ input[type="button"] {
     overflow-x: hidden;
     height: 635px;
     padding: 0 10px; }
-    .wish-list .item-wishlist .item .cover {
+    .wish-list .item-wishlist .item {
       display: inline-block;
-      height: 70px;
-      width: 70px;
-      background-color: red; }
-    .wish-list .item-wishlist .item .item-name {
-      font: 1.2em "Pacifico", cursive;
-      color: #1b75ba; }
+      margin: 15px 0; }
+      .wish-list .item-wishlist .item .cover {
+        height: 70px;
+        width: 70px;
+        background-color: red;
+        border: 5px solid white;
+        box-shadow: 0px 1px 3px 0px #646464;
+        float: left;
+        display: block;
+        margin-right: 10px; }
+      .wish-list .item-wishlist .item .item-name {
+        font: 1.2em "Pacifico", cursive;
+        color: #1b75ba;
+        line-height: 20px;
+        text-align: left;
+        display: block; }
+        .wish-list .item-wishlist .item .item-name:hover {
+          color: #FF851B; }
   .wish-list .share hr {
     margin: 5px 2px; }
   .wish-list .share .share-button {
